# Noirlang-Experiments

./: README.md  test-verification.sh  test-verification2.sh  test-verification_old.sh
private_limit_orders/tmp/: test.json
secret_word_puzzle/hashgen/src/: main.rs
secret_word_puzzle/src/: main.nr
soroban_verification/: Cargo.toml  README.md
soroban_verification_old/src/: lib.rs
strong_password_proof/passpadder/src/: main.rs
ultrahonk_soroban_contract/: Cargo.toml
