[package]
name = "soroban_verification"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "23.1.0", default-features = false, features = ["alloc"] }
ultrahonk_rust_verifier = { git = "https://github.com/yugocabrio/ultrahonk-rust-verifier.git", branch = "main", default-features = false, features = ["alloc", "serde", "serde_json"] }

[dev-dependencies]
soroban-sdk = { version = "23.1.0", features = ["testutils"] }
